--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,9 @@ buildscript {
         springBootVersion = '2.0.3.RELEASE'
     }
     repositories {
-        mavenCentral()
+maven {
+        url "http://maven.aliyun.com/nexus/content/groups/public"
+    }
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -15,7 +17,9 @@ apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 
 repositories {
-    jcenter()
+    maven {
+	url "http://maven.aliyun.com/nexus/content/groups/public"
+    }
 }
 
 dependencies {
